--- a/www/js/modules/home/view/homeview.template.html
+++ b/www/js/modules/home/view/homeview.template.html
@@ -1,6 +1,6 @@
 <ion-header-bar>
     <div class="buttons">
-        <button class="button">Left Button</button>
+        <button class="button" ui-sref="application.home">Back</button>
     </div>
     <h1 class="title">{{view.grocery.name}}</h1>
 </ion-header-bar>
@@ -8,7 +8,7 @@
 <ion-content>
     <ion-list>
         <ion-item ng-repeat="item in view.grocery.items">
-            {{item.name}}
+            {{item.itemid}}
         </ion-item>
     </ion-list>
 </ion-content>
